[gd_scene load_steps=4 format=3 uid="uid://caqvpv434u0tf"]

[ext_resource type="Script" path="res://addons/godot_gameplay_systems/attributes_and_abilities/inspector/components/attribute_effect_editor_row.gd" id="1_ntmni"]
[ext_resource type="Texture2D" uid="uid://qdrl51ys1mv7" path="res://addons/godot_gameplay_systems/attributes_and_abilities/assets/TimedEffectOneShot@0.15x.png" id="2_twl3n"]
[ext_resource type="Texture2D" uid="uid://bbd35kb6frop4" path="res://addons/godot_gameplay_systems/attributes_and_abilities/assets/TimedEffect@0.15x.png" id="3_iu2ar"]

[node name="AttributeEffectRow" type="GridContainer"]
offset_right = 262.0
offset_bottom = 140.0
script = ExtResource("1_ntmni")

[node name="AppliesAs" type="BoxContainer" parent="."]
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="AppliesAs"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 2
selected = 0
popup/item_0/text = "Alters value directly"
popup/item_0/id = 0
popup/item_1/text = "Applies buff"
popup/item_1/id = 1

[node name="AttributeName" type="BoxContainer" parent="."]
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="AttributeName"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RemoveButton" type="Button" parent="AttributeName"]
layout_mode = 2
text = "Remove"

[node name="MinimumValue" type="BoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="MinimumValue"]
layout_mode = 2
size_flags_horizontal = 3
text = "Minimum value applied"
clip_text = true

[node name="SpinBox" type="SpinBox" parent="MinimumValue"]
layout_mode = 2
size_flags_horizontal = 3
allow_greater = true
allow_lesser = true
alignment = 2
update_on_text_changed = true
select_all_on_focus = true

[node name="MaximumValue" type="BoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="MaximumValue"]
layout_mode = 2
size_flags_horizontal = 3
text = "Maximum value applied"
clip_text = true

[node name="SpinBox" type="SpinBox" parent="MaximumValue"]
layout_mode = 2
size_flags_horizontal = 3
allow_greater = true
allow_lesser = true
alignment = 2
update_on_text_changed = true
select_all_on_focus = true

[node name="LifeTime" type="BoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="LifeTime"]
layout_mode = 2
size_flags_horizontal = 3
text = "Life time type"

[node name="OptionButton" type="OptionButton" parent="LifeTime"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
item_count = 2
selected = 0
popup/item_0/text = "One Shot"
popup/item_0/icon = ExtResource("2_twl3n")
popup/item_0/id = 0
popup/item_1/text = "Time-Based"
popup/item_1/icon = ExtResource("3_iu2ar")
popup/item_1/id = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="Lifetime Setup" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 50)
layout_mode = 2
text = "Life time settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerSetupContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TimeoutLabel" type="Label" parent="VBoxContainer/TimerSetupContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Seconds"

[node name="TimeoutSpinBox" type="SpinBox" parent="VBoxContainer/TimerSetupContainer"]
layout_mode = 2
size_flags_horizontal = 3
allow_greater = true
allow_lesser = true
alignment = 2
update_on_text_changed = true
select_all_on_focus = true

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/TimerSetupContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ApplicationCountLabel" type="Label" parent="VBoxContainer/TimerSetupContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Apply times (0 = infinite)"

[node name="ApplicationCountSpinBox" type="SpinBox" parent="VBoxContainer/TimerSetupContainer"]
layout_mode = 2
size_flags_horizontal = 3
allow_greater = true
allow_lesser = true
alignment = 2
update_on_text_changed = true
select_all_on_focus = true

[node name="HSeparator" type="HSeparator" parent="."]
custom_minimum_size = Vector2(2.08165e-12, 20)
layout_mode = 2
